src/scss/_navigation.scss
// If outside window, activate sticky navigation
.nav-observer {
  top: calc(-1.1px + var(--nav-observer-offset, 0px));
}

// Observer must account for large admin bar
@include bp(601px) {
  .admin-bar:not(.mobile-menu-open) {
    .main-navigation {
      top: calc(46.1px - var(--nav-observer-offset, 0px));
    }

    .nav-observer {
      top: calc(-47.1px + var(--nav-observer-offset, 0px));
    }
  }
}

// Observer must account for small admin bar
@include bp(783px) {
  .admin-bar:not(.mobile-menu-open) {
    .main-navigation {
      top: calc(32.1px - var(--nav-observer-offset, 0px));
    }

    .nav-observer {
      top: calc(-33.1px + var(--nav-observer-offset, 0px));
    }
  }
}

// Float in from top
:root:not(.no-nav-sticky) .scrolling-up.is-inside-main {
  .main-navigation {
    transform: translate3d(0, 0, 0);
  }
}

// Float out to top
:root:not(.no-nav-sticky) .scrolling-down.is-inside-main {
  .main-navigation:not(:hover, :focus-within) {
    transform: translate3d(0, -115%, 0); // Accounts for shadow
  }
}

// Case above or equal to 1024px
:root:not(.no-nav-sticky) body:not(.scrolled-to-top) .main-navigation.is-sticky {
  .main-navigation__background {
    opacity: var(--navigation-background-sticky-end-opacity);
  }

  .main-navigation__list > :is(.menu-item, .page_item) {
    border-radius: 0;
  }
}

// Case below 1024px
:root:not(.no-nav-sticky) .main-navigation.is-sticky {
  .main-navigation__background {
    @media only screen and (max-width: 1023px) {
      opacity: var(--navigation-background-sticky-end-opacity);
    }
  }
}

// Extra spacing if header image is missing
:is(.header-style-top, .header-style-none) .main-navigation {
  @include bp(640px) {
    margin-bottom: 1.5rem;
  }
}

:root:not(.no-nav-sticky) .site .main-navigation.is-sticky {
  position: sticky;
}

.main-navigation {
  --focus-offset: -2px;
  top: calc(-0.1px - var(--nav-observer-offset, 0px));
  z-index: 1000;
  color: var(--navigation-text);
  font-size: get_clamp(14, 16, 375, 768);
  font-weight: var(--font-weight-navigation);
  text-shadow: var(--navigation-text-shadow);
  padding: 0;
  margin: 12px 0;
  width: 100%;
  transform: translateZ(0); // Improve performance
  transition: transform var(--transition-duration);
  contain: layout style; // Improve performance

  &__background {
    position: absolute;
    inset: 0;
    z-index: -1;
    display: block;
    background: var(--navigation-background-sticky);
    box-shadow: 0 0 1px transparent; // Safari fix to show drop-shadow
    opacity: var(--navigation-background-sticky-start-opacity);
    filter: var(--navigation-drop-shadow);
    contain: strict; // Improve performance
  }

  &__wrapper {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    max-width: var(--site-width);
  }

  &__left {
    flex-grow: 0;
    min-height: var(--navigation-height);
    max-width: calc(100% - 48px);
    overflow: hidden;

    @include bp(desktop) {
      flex-grow: 1;
      overflow: visible;
    }
  }

  // Customizer: Collapse mobile navigation
  &._collapse-on-mobile {
    .main-navigation__left {
      display: none;
      content-visibility: hidden;

      @include bp(640px) {
        display: block;
        content-visibility: visible;
      }
    }

    .mobile-menu-button {
      &__label {
        display: block;

        @include bp(640px) {
          display: none;
        }
      }
    }
  }

  &__right {
    flex-shrink: 0;
  }

  &__list {
    position: relative;
    display: flex;
    max-width: 100%;
    overflow: scroll hidden;
    scrollbar-width: none; // FF

    @include bp(desktop) {
      flex-wrap: wrap;
      overflow: visible;
    }

    &::-webkit-scrollbar {
      display: none;
      height: 0;
      width: 0;
    }

    > :is(.menu-item, .page_item) {
      @include bp(desktop) {
        border-radius: var(--layout-border-radius-small);
      }

      &.menu-item-has-children {
        @include bp(desktop) {
          border-radius: var(--layout-border-radius-small) var(--layout-border-radius-small) 0 0;

          &:hover {
            background: var(--navigation-item-active-submenu-background);
          }
        }
      }
    }
  }

  .menu-item {
    position: relative;
    height: fit-content;
    transition: background-color .1s;

    &:not(:hover) {
      .sub-menu {
        pointer-events: none;
        opacity: 0;
      }
    }

    &:hover {
      .sub-menu {
        transition-delay: .3s;
      }
    }

    &:hover {
      background: var(--navigation-item-active-background);
    }

    &.menu-item-has-children {
      @include bp(desktop) {
        > a {
          &::after {
            content: unicode("f078");
            margin: 0 -0.5em 0 .75em;
          }
        }
      }
    }

    :is(a, label) {
      position: relative;
      display: flex;
      align-items: center;
      justify-content: space-between;
      color: var(--navigation-text);
      line-height: 1.2;
      letter-spacing: get_relative_clamp(-0.01, 0, 375, 480, 'vw', 'em');
      white-space: nowrap;
      height: var(--navigation-height);
      padding: 0 1rem;

      &:hover {
        color: var(--navigation-text-hover);
      }
    }
  }

  // Level 2
  .sub-menu {
    position: absolute;
    z-index: 1;
    display: none;
    content-visibility: hidden;
    border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
    min-width: MAX(152px, 100%);
    box-shadow: var(--navigation-submenu-box-shadow);
    transition: opacity .1s;

    @include bp(desktop) {
      display: block;
      content-visibility: visible;
    }

    .menu-item {
      background: var(--navigation-item-active-submenu-background);

      &:last-child {
        border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
      }

      &.menu-item-has-children {
        > a {
          &::after {
            content: unicode("f054");
          }
        }

        &:hover {
          border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
        }
      }

      &:hover {
        background: var(--navigation-subitem-active-background);
      }
    }

    .sub-menu {
      top: 0;
      right: 0;
      transform: translate(100%);

      &:last-child {
        border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
      }

      .menu-item {
        border-radius: 0;

        &:first-child {
          border-radius: 0 var(--layout-border-radius-small) 0 0;
        }

        &:last-child {
          border-radius: 0 0 var(--layout-border-radius-small) var(--layout-border-radius-small);
        }
      }

      // Level 4
      .sub-menu {
        display: none;
        content-visibility: hidden;

        .menu-item a {
          &.menu-item-has-children {
            a::after {
              content: none;
            }
          }
        }
      }
    }
  }

  .menu-item-has-children > a {
    @include bp(desktop) {
      &::after {
        font-family: 'Font Awesome 6 Free';
        font-size: .75em;
        font-weight: 900;
      }
    }
  }
}

.static-menu-item > a {
  cursor: default;
}

.user-is-tabbing {
  .main-navigation {
    :is(.menu-item, .page_item) {
      &:focus-within {
        background: var(--navigation-item-active-background);

        > .sub-menu {
          pointer-events: initial;
          opacity: 1;
        }
      }
    }
  }
}

.mobile-menu-button {
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 20px;
  line-height: 1;
  padding: 0 16px;
  height: var(--navigation-height);

  @include bp(desktop) {
    display: none;
    content-visibility: hidden;
  }

  &__label {
    display: none;
    font-size: 1rem;
    font-weight: var(--font-weight-strong);
    text-transform: uppercase;
  }
}

